singolo3.css
/* ... */
/**
* 1. Correct the odd appearance in Chrome and Safari.
* 2. Correct the outline style in Safari.
*/
[type='search'] {
    -webkit-appearance: textfield; /* 1 */
    outline-offset: -2px; /* 2 */
}

/**
* Remove the inner padding and cancel buttons in Chrome and Safari on OS X.
*/
[type='search']::-webkit-search-cancel-button,
[type='search']::-webkit-search-decoration {
    -webkit-appearance: none;
}

/**
* Correct the text style of placeholders in Chrome, Edge, ff, and Safari.
*/
input::-moz-placeholder,
textarea::-moz-placeholder {
    color: inherit;
    opacity: 0.54;
}

input:-ms-input-placeholder,
textarea:-ms-input-placeholder {
    color: inherit;
    opacity: 0.54;
}

input::-webkit-input-placeholder,
textarea::-webkit-input-placeholder {
    color: inherit;
    opacity: 0.54;
}

input::-ms-clear,
input::-ms-reveal {
    display: none;
}

/**
* 1. Correct the inability to style clickable types in iOS and Safari.
* 2. Change font properties to `inherit` in Safari.
*/
::-webkit-file-upload-button {
    -webkit-appearance: button; /* 1 */
    font: inherit; /* 2 */
}

/* table
  ========================================================================== */ /* Remove table cell spacing and padding */
table {
    border-collapse: collapse;
    border-spacing: 0;
}

td,
th {
    padding: 0;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
figure,
form,
blockquote {
    margin: 0;
}

ul,
ol,
li,
dl,
dd {
    margin: 0;
    padding: 0;
}

ul,
ol {
    list-style: none outside none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-size: 100%;
    font-weight: normal;
}

/************* CSS RESET: END *************/

/************* ICONS: START *************/
.icon-facebook{
    background-image: url("assets/images/facebook-icon.png");
}
.icon-google{
    background-image: url("assets/images/google-icon.png");
}
.icon-twitter{
    background-image: url("assets/images/twitter-icon.png");
}
.icon-linkedin{
    background-image: url("assets/images/linkedin-icon.png");
}
.icon-location{
  background-image: url("assets/images/location-icon.png");
    background-size: 7px 11px;
}
.icon-phone{
    background-image: url("assets/images/phone-icon.png");
    background-size: 11px;
}
.icon-mail{
    background-image: url("assets/images/mail-icon.png");
    background-size: 13px 8px;
}
/************* ICONS: END *************/


:root {
    --containerWidth: 1020px;
    --fontLight: 300;
    --fontRegular: 400;
    --fontBold: 700;
    --fontBlack: 900;
    --colorWhite: #fff;
    --colorGray: #666d89;
    --colorGrayThin: #f2f2f2;
    --colorGrayLight: #464b5d;
    --colorGrayMedium: #dedede;
    --colorGrayDark: #2d303a;
    --colorLavender: #666d89;
    --colorRed: #f06c64;
    --colorRedLight: #f0d8d9;
    --colorRedMedium: #d6564f;
    --colorPink: #f48c8f;



}

img {
    display: block;
    max-width: 100%;
}

.home-page {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    font-family: "Lato";
}
/************* BASE: END *************/

/************* CONTENT: START *************/
.content-section {
    padding: 60px calc((100% - var(--containerWidth)) / 2 + 40px) 74px calc((100% - var(--containerWidth)) / 2 + 40px);
    color: var(--colorText);
    background: linear-gradient(180deg, var(--colorBackgroundFrom) calc(100% - 6px), var(--colorBackgroundTo) 6px);
}

.content-section > .title {
    font-weight: var(--fontBlack);
    font-size: 30px;
}

.content-section > .description {
    font-weight: var(--fontLight);
    font-size: 18px;
    line-height: 1.7;
}

/*.content-section > .title + .description {
    margin-top: 27px;
}*/
/************* CONTENT: END *************/

/************* FORM: START*************/

.content-section.form-section {
    --colorText: var(--colorRedLight);
    --colorBackgroundFrom: var(--colorRed);
    --colorBackgroundTo: #ea676b;
}
.form-section{
    display: grid;
    grid-template-columns: 620px 1fr;
    grid-gap: 16px 20px;
    padding-top: 60px;
    padding-bottom: 74px;
}
.form-section > .title,
.form-section > .description{
    grid-column: 1 / -1;
}

.content-section .form,
.content-section .contact-information-block{
    margin-top: 28px;
}

.form{
    display: grid;
    grid-gap: 16px;
}
.form > .textarea{
    height: 176px;
}
.form > button{
    display: none;
}
.input, .textarea{
    border: initial;
}
.form .input,
.form .textarea{
    padding: 12px;
    font-size: 12px;
    color: var(--colorPink);
    background-color: var(--colorRedMedium);
    border-radius: 3px;
}
.contact-information-block > .title{
    font-weight: var(--fontBold);
    font-size: 18px;
}
.contact-information-block > .title + .description{
    margin-top: 8px;
}
.contact-information-block > .description{
    line-height: 1.8;
}
.contact-information-block > .description,
.contact-information-block .contacts-block{
    font-size: 12px;
}
.contact-information-block > .description + .contacts-block{
    margin-top: 27px;
}
.contacts-block > .icon{
    display: block;
    background-repeat: no-repeat;
    background-position: left 3px top 50%;


}

.contacts-block .contact{
    padding-left: 22px;
}
.contacts-block .contact + .contact{
    margin-top: 7px;
}

/************* FORM: END*************/



/************* FOOTER: START*************/

.footer{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px calc((100% - var(--containerWidth)) / 2 + 40px) 36px calc((100% - var(--containerWidth)) / 2 + 40px);
    font-size: 12px;
    color: var(--colorLavender);
    background-color: var(--colorGrayDark);
}

.block-with-socials > .icon {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 33px;
    height: 33px;
    border: 1px solid;
    border-radius: 50%;
    background-position: center;
    background-repeat: no-repeat;
    transition: filter 0.3s;
}

.footer .block-with-socials > .icon:hover {
    filter: contrast(0.5);
}

.block-with-socials > .icon + .icon {
    margin-left: 2px;
}
/* ... */

